--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800">
+          href="https://fonts.googleapis.com/css?family=Roboto|Agbalumo:100,200,300,400,500,600,700,800">
     <title>Simple Market Place</title>
 </head>
 <body class="white medium fast">
