add bange button, кнопочки всякие, туда сюда там сям

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           href="https://fonts.googleapis.com/css?family=Roboto|Agbalumo:100,200,300,400,500,600,700,800">
     <title>Simple Market Place</title>
 </head>
-<body class="white medium fast">
+<body class="white medium fast standard-animation">
 <div id="root"></div>
 <script type="module" src="/src/main.tsx"></script>
 </body>
