add some skeletons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto|Agbalumo:100,200,300,400,500,600,700,800">
-    <title>Simple Market Place</title>
+    <title>VM Store</title>
 </head>
 <body class="white medium fast standard-animation">
 <div id="root"></div>
